Fix animation issue on mobile

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -21,6 +21,11 @@
   color: white;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 html {
   font-size: 62.5%;
 }
